fix: tighten gateway review findings